--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mdfayaz2.github.io/project2",
+  "homepage": "https://9866chandu.github.io/project2",
   "name": "project2",
   "version": "0.1.0",
   "private": true,
